--- a/RJTechnology/index.css
+++ b/RJTechnology/index.css
@@ -15,6 +15,21 @@ h1,p,section,h2,h3,h4,h5,h6
    height: 30px;   
    display: flex;   
    align-items: center;
+   
+}
+#movingtext{
+    
+    animation: translate 6s  infinite alternate;
+}
+
+@keyframes translate{
+    
+   /* 0%   { transform: translateX(0); }        start position */
+  50%  { transform: translateX(100%); }     /* move a bit right */
+  100% { transform: translateX(50%); }    /* move a bit left */
+
+
+    
 }
 
 #offer-nav p
@@ -85,6 +100,37 @@ h1,p,section,h2,h3,h4,h5,h6
     text-decoration: none;
     color: black;
 }
+
+/* for drop down from the courses nav link */
+
+#dropdown-li-ul
+{
+    position: absolute; 
+    left: 550px; 
+    top: 200px;  
+    background-color: rgb(214, 221, 214);
+    padding: 2px;
+    z-index: 1;
+    display: none;
+    flex-direction: column;
+    
+
+}
+#dropdown-li:hover #dropdown-li-ul
+{
+   display: flex;
+}
+
+#dropdown-li-ul li:hover 
+{
+    background-color: black;
+    
+}
+#dropdown-li-ul li:hover a
+{
+    color:rgb(214, 221, 214);
+}
+
 
 #nav button
 {    
@@ -173,7 +219,7 @@ h1,p,section,h2,h3,h4,h5,h6
 .wrap-button-form:hover  .enquiry-form {
   display: block;
 }
-
+/* main design */
 
 
 .bg-image
@@ -186,10 +232,90 @@ h1,p,section,h2,h3,h4,h5,h6
     width: 100%;
     height: 600px;
     position: relative;
-    overflow: hidden;
+    overflow: auto;
     
 }
 
+
+.apply-online-section
+{
+    color:white;    
+    margin-left: 150px;
+    margin-top: 100px;
+    margin-right: 40%;
+    padding: 10px;
+    
+}
+.apply-online-section h1,.apply-online-section p,.apply-online-section h4
+{
+    padding: 10px;
+    color:aliceblue;
+}
+.apply-online-section button
+{
+    background-color:#055343 ;
+    padding: 10px 12px;       
+    color: white;
+    box-shadow: 5px;
+    margin: 10px;
+    font-weight: bold;
+    font-size: large;
+    border-radius: 5%; 
+}
+.interest-form-container:hover  .interest-form
+{
+    /* position: relative; */
+    display: flex;
+    
+}
+.interest-form-container:hover  #close
+{
+    /* position: relative; */
+    display: block;
+    
+}
+.interest-form
+{
+    display: none;    
+    flex-direction: column;
+    padding: 10px;
+    background-color: #d7dcdb;
+    height: fit-content;
+    width: fit-content;
+    text-align: center;
+    position: absolute;
+    left: 600px;
+    top: 60px;
+    }
+.interest-form input,.interest-form [type="button"],.interest-form textarea,.interest-form h2
+{
+    padding: 10px;
+    margin: 10px;
+    color: black;
+}
+
+.interest-form [type="button"]
+{
+    margin: 10px;
+    background-color: #67ab9d;
+}
+#close
+{
+    position: absolute;
+    z-index: 1;
+    right: 46%;
+    top: 80px;
+    color: #055343;
+    display: none;
+}
+#close:hover ~ .interest-form
+{
+    display: none;
+}
+#close:hover
+{
+    display: none;
+}
 
 
 @keyframes changeImage
