--- a/RJTechnology/index.css
+++ b/RJTechnology/index.css
@@ -1,282 +1,239 @@
-body{
-    margin: 0;
-    background-color: white;
-    font-family: 'Poppins', sans-serif;
+body {
+  margin: 0;
+  background-color: white;
+  font-family: "Poppins", sans-serif;
 }
-h1,p,section,h2,h3,h4,h5,h6
-{
-    margin:0;
-   
-}
-
-#offer-nav
-{
-   background-color: orange; 
-   height: 30px;   
-   display: flex;   
-   align-items: center;
-   
-}
-#movingtext{
-    
-    animation: translate 6s  infinite alternate;
+h1,
+p,
+section,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
 }
 
-@keyframes translate{
-    
-   /* 0%   { transform: translateX(0); }        start position */
-  50%  { transform: translateX(100%); }     /* move a bit right */
-  100% { transform: translateX(50%); }    /* move a bit left */
-
-
-    
+#offer-nav {
+  background-color: orange;
+  height: 30px;
+  display: flex;
+  align-items: center;
+}
+#movingtext {
+  animation: translate 6s infinite alternate;
 }
 
-#offer-nav p
-{
-    padding-left: 100px;
+@keyframes translate {
+  
+  50% {
+    transform: translateX(100%);
+  } /* move a bit right */
+  100% {
+    transform: translateX(50%);
+  } /* move a bit left */
 }
 
-#contact-div
-{
-    margin: 0px;
-    background-color:rgb(2, 2, 53);
-    color: aliceblue;  
-    font-weight: bold; 
-    display: flex;
-    align-items: center;
-    /* give space from left and right of the contact div */
-    padding-left: 20px;
-    padding-right: 20px;
-
-    
+#offer-nav p {
+  padding-left: 100px;
 }
-#email
-{
-    flex: 1;
+/* blue div with contact */
+#contact-div {
+  margin: 0px;
+  background-color: rgb(2, 2, 53);
+  color: aliceblue;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  /* give space from left and right of the contact div */
+  padding-left: 20px;
+  padding-right: 20px;
 }
-#phone
-{
-    flex: 2;
+#email {
+  flex: 1;
 }
-#icons
-{
-    /* give space between the icons */
-    padding: 20px;
+#phone {
+  flex: 2;
+}
+#icons {
+  /* give space between the icons */
+  padding: 20px;
 }
 
-#icons i
-{
-    padding: 20px;
-    color: aliceblue;
+#icons i {
+  padding: 20px;
+  color: aliceblue;
 }
-#nav
-{
-    background-color: rgb(187, 214, 196);;
-    display: flex;
-    font-size: x-large;
-    font-weight: bold;   
-    justify-content: flex-start;   
-    
-}
-    
-#nav h3
-{
-    color: #055343;
-    padding-left: 0px;
-    margin-left: 30px;
-    padding-top: 25px;
-   
+#nav {
+  background-color: rgb(187, 214, 196);
+  display: flex;
+  font-size: x-large;
+  font-weight: bold;
+  justify-content: flex-start;
 }
 
-
-#nav ul li
-{
-    display: inline;
-    padding: 20px;    
+#nav h3 {
+  color: #055343;
+  padding-left: 0px;
+  margin-left: 30px;
+  padding-top: 25px;
 }
 
-#nav ul li a{
-    text-decoration: none;
-    color: black;
+#nav ul li {
+  display: inline;
+  padding: 20px;
+}
+
+#nav ul li a {
+  text-decoration: none;
+  color: black;
 }
 
 /* for drop down from the courses nav link */
 
-#dropdown-li-ul
-{
-    position: absolute; 
-    left: 550px; 
-    top: 200px;  
-    background-color: rgb(214, 221, 214);
-    padding: 2px;
-    z-index: 1;
-    display: none;
-    flex-direction: column;
-    
-
+#dropdown-li-ul {
+  position: absolute;
+  left: 550px;
+  top: 200px;
+  background-color: rgb(214, 221, 214);
+  padding: 2px;
+  z-index: 1;
+  display: none;
+  flex-direction: column;
 }
-#dropdown-li:hover #dropdown-li-ul
-{
-   display: flex;
+#dropdown-li:hover #dropdown-li-ul {
+  display: flex;
 }
 
-#dropdown-li-ul li:hover 
-{
-    background-color: black;
-    
+#dropdown-li-ul li:hover {
+  background-color: black;
 }
-#dropdown-li-ul li:hover a
-{
-    color:rgb(214, 221, 214);
+#dropdown-li-ul li:hover a {
+  color: rgb(214, 221, 214);
 }
 
-
-#nav button
-{    
-    text-align: center;
-    background-color:#055343;  
-    margin-left: 100px;
-    padding: 10px 40px;
-    color: white;
-    font-weight: bold;
-    font-size: large;
-    border-radius: 5%;   
-    
+#nav button {
+  text-align: center;
+  background-color: #055343;
+  margin-left: 100px;
+  padding: 10px 40px;
+  color: white;
+  font-weight: bold;
+  font-size: large;
+  border-radius: 5%;
 }
 
-.wrap-button-form
-{
-    display: inline;
+.wrap-button-form {
+  display: inline;
 }
 
 /* Enquiry Form */
-    .enquiry-form
-    {
-        display:none;  
-        position: absolute;        
-        width: 400px;
-        z-index: 5;        
-        background-color:rgb(233, 239, 233);        
-        right: 50px;
-        border-radius: 5px;
-        text-align: center;
-                
-    }
-    .form 
-    {
-        display: flex;
-        flex-direction: column;
-        align-items:center;  
-        justify-content:left;
-        gap: 5px;       
-        
-    }
-     .form input
-    {
-        width: 250px;
-        padding: 10px;
-        
-    }
-    
-    .form select
-    {
-        width: 270px;
-        padding: 10px 0px;
-        margin: 5px 50px;
-    }
+.enquiry-form {
+  display: none;
+  position: absolute;
+  width: 400px;
+  z-index: 5;
+  background-color: rgb(233, 239, 233);
+  right: 50px;
+  border-radius: 5px;
+  text-align: center;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: left;
+  gap: 5px;
+}
+.form input {
+  width: 250px;
+  padding: 10px;
+}
 
-    .form input[type="button"]
-    {       
-       background-color: #055343;
-       margin-bottom: 10px;
-       border-radius: 5px;
-       font-size: large;
-       font-style: normal;
-    } 
+.form select {
+  width: 270px;
+  padding: 10px 0px;
+  margin: 5px 50px;
+}
 
-    .enquiry-form nav ul{
-        display: flex ;
-        align-items: center;
-        gap: 60px;
-        background-color: #055343;
-        padding: 10px 5px;
-        margin-left: 35px;
-        margin-bottom: 10px;
-        margin-right: 15px;
-    }
+.form input[type="button"] {
+  background-color: #055343;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  font-size: large;
+  font-style: normal;
+}
 
-    .enquiry-form nav ul span
-    {
-        display: flex;
-        /* align-items: center; */
-        /* gap: 10px; */
+.enquiry-form nav ul {
+  display: flex;
+  align-items: center;
+  gap: 60px;
+  background-color: #055343;
+  padding: 10px 5px;
+  margin-left: 35px;
+  margin-bottom: 10px;
+  margin-right: 15px;
+}
 
-    }
+.enquiry-form nav ul span {
+  display: flex;
+  /* align-items: center; */
+  /* gap: 10px; */
+}
 
-    
-   
-.wrap-button-form:hover  .enquiry-form {
+.wrap-button-form:hover .enquiry-form {
   display: block;
 }
 
-
 /* main design */
 
-
-.bg-image
-{   
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    animation: changeImage 10s infinite;
-    transition: background-image 1s ease-in-out;
-    width: 100%;
-    height: 600px;
-    position: relative;
-    overflow: auto;
-    
+.bg-image {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  animation: changeImage 10s infinite;
+  transition: background-image 1s ease-in-out;
+  width: 100%;
+  height: 600px;
+  position: relative;
+  overflow: auto;
 }
 
-
-.apply-online-section
-{
-    color:white;    
-    margin-left: 150px;
-    margin-top: 100px;
-    margin-right: 40%;
-    padding: 10px;
-    
+.apply-online-section {
+  color: white;
+  margin-left: 150px;
+  margin-top: 100px;
+  margin-right: 40%;
+  padding: 10px;
 }
-.apply-online-section h1,.apply-online-section p,.apply-online-section h4
-{
-    padding: 10px;
-    color:aliceblue;
+.apply-online-section h1,
+.apply-online-section p,
+.apply-online-section h4 {
+  padding: 10px;
+  color: aliceblue;
 }
-.apply-online-section button
-{
-    background-color:#055343 ;
-    padding: 10px 12px;       
-    color: white;
-    box-shadow: 5px;
-    margin: 10px;
-    font-weight: bold;
-    font-size: large;
-    border-radius: 5%; 
+.apply-online-section button {
+  background-color: #055343;
+  padding: 10px 12px;
+  color: white;
+  box-shadow: 5px;
+  margin: 10px;
+  font-weight: bold;
+  font-size: large;
+  border-radius: 5%;
 }
 
 /* apply online label as button */
-.apply
-{
-    display: inline-block;
-    background-color: #055343;
-    width: 100px;
-    height: 30px;
-    padding: 5px;
-    text-align: center;
-    border-radius: 5%;
-    padding-top: 10px;
-    font-weight: 200;
+.apply {
+  display: inline-block;
+  background-color: #055343;
+  width: 100px;
+  height: 30px;
+  padding: 5px;
+  text-align: center;
+  border-radius: 5%;
+  padding-top: 10px;
+  font-weight: 200;
 }
 
 /* quick enquiry form design */
@@ -285,317 +242,249 @@ h1,p,section,h2,h3,h4,h5,h6
   display: flex;
 }
 
-#apply-form
-{
-    display: none;
+#apply-form {
+  display: none;
 }
-.close
-{
-    display: flex;
-    justify-content:space-between;
-    color: white;
+.close {
+  display: flex;
+  justify-content: space-between;
+  color: white;
 }
 
-
-
-
-.interest-form
-{
-    display: none;    
-    flex-direction: column;
-    padding: 10px;
-    background-color: #d7dcdb;
-    height: fit-content;
-    width: fit-content;
-    text-align: center;
-    position: absolute;
-    left: 600px;
-    top: 60px;
-    color: aliceblue;
-    }
-.interest-form input,.interest-form [type="button"],.interest-form textarea,.interest-form h2
-{
-    padding: 10px;
-    margin: 10px;
-    color: black;
+.interest-form {
+  display: none;
+  flex-direction: column;
+  padding: 10px;
+  background-color: #d7dcdb;
+  height: fit-content;
+  width: fit-content;
+  text-align: center;
+  position: absolute;
+  left: 600px;
+  top: 60px;
+  color: aliceblue;
 }
 
-.interest-form [type="button"]
-{
-    margin: 10px;
-    background-color: #67ab9d;
-}
-#close
-{
-    position: absolute;
-    z-index: 1;
-    right: 46%;
-    top: 80px;
-    color: #055343;
-    display: none;
-}
-#close:hover ~ .interest-form
-{
-    display: none;
-}
-#close:hover
-{
-    display: none;
+.interest-form input,
+.interest-form [type="button"],
+.interest-form textarea,
+.interest-form h2 {
+  padding: 10px;
+  margin: 10px;
+  color: black;
 }
 
-
-@keyframes changeImage
-{
-    0%
-    {
-        background-image: url(images/pexels-yankrukov-8199667.jpg);
-    }
-    25%
-    {
-        background-image: url(images/group-students-posing-with-notepads.jpg);
-    }
-    50%
-    {
-        background-image: url(images/cheerful.jpg);
-    }
-    75%
-    {
-        background-image: url(images/campus.jpg);
-    }
-    100%
-    {
-        background-image: url(images/5.jpg);
-    }
- 
-
-    
+.interest-form [type="button"] {
+  margin: 10px;
+  background-color: #67ab9d;
 }
-    
-.key-features-h1
-{
-    text-align: center;
-    color: black;
-    padding: 10px;
-    margin-top: 40px;
-    padding:10px 30px;
+#close {
+  position: absolute;
+  z-index: 1;
+  right: 46%;
+  top: 80px;
+  color: #055343;
+  display: none;
 }
-.key-features-p
-    {
-        text-align: center;       
-        font-size: 18px;
-        padding-bottom: 50px;
-        margin-bottom: 40px;
-
-    }
-.our-courses
-{
-    text-align: center;
-    margin-top: 40px;
-    margin-bottom: 40px;
+#close:hover ~ .interest-form {
+  display: none;
 }
-.our-courses h1{
-    padding: 20px;
+#close:hover {
+  display: none;
 }
-.key-features-cards
-    {
-        display: flex;
-       justify-content: center;
-       gap: 30px;       
-        
-    }
 
-    .cards
-    {
-        text-align: center;
-        background-color: #67ab9d;   
-        border-radius: 10px;  
-        box-shadow: inset;               
-        color: white;        
-        position: relative;
-        margin: 30px;
-        /* margin-top: 50px; */
-        padding: 20px 70px;
-        
-        
-    }
-    .cards:hover
-    {
-        background-color: white;
-        color: #67ab9d;
-        box-shadow: -5px -5px 5px 5px rgba(0, 0, 0, 0.2); 
+@keyframes changeImage {
+  0% {
+    background-image: url(images/pexels-yankrukov-8199667.jpg);
+  }
+  25% {
+    background-image: url(images/group-students-posing-with-notepads.jpg);
+  }
+  50% {
+    background-image: url(images/cheerful.jpg);
+  }
+  75% {
+    background-image: url(images/campus.jpg);
+  }
+  100% {
+    background-image: url(images/5.jpg);
+  }
+}
 
-    }
+.key-features-h1 {
+  text-align: center;
+  color: black;
+  padding: 10px;
+  margin-top: 40px;
+  padding: 10px 30px;
+}
+.key-features-p {
+  text-align: center;
+  font-size: 18px;
+  padding-bottom: 50px;
+  margin-bottom: 40px;
+}
+.our-courses {
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+.our-courses h1 {
+  padding: 20px;
+}
+.key-features-cards {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
 
-   .cards div
-   {    
-    width: 70px;
-    height: 70px;
-    background-color:rgb(187, 214, 196);
-    border-radius: 50%;
-    /* make the icon to the centre of icon div */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* make icon div look like hook */
-    position: absolute;
-    text-align: center;   
-    left: 50%;  
-    transform: translateX(-50%);
-    top:-20%
-   }
-   .cards h3{
-    padding-top: 20px;
-    
-   }
+.cards {
+  text-align: center;
+  background-color: #67ab9d;
+  border-radius: 10px;
+  box-shadow: inset;
+  color: white;
+  position: relative;
+  margin: 30px;
+  /* margin-top: 50px; */
+  padding: 20px 70px;
+}
+.cards:hover {
+  background-color: white;
+  color: #67ab9d;
+  box-shadow: -5px -5px 5px 5px rgba(0, 0, 0, 0.2);
+}
 
-   .cards div i
-   {
-    color: black;
-    margin-bottom: 0px;
-   
-    } 
+.cards div {
+  width: 70px;
+  height: 70px;
+  background-color: rgb(187, 214, 196);
+  border-radius: 50%;
+  /* make the icon to the centre of icon div */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* make icon div look like hook */
+  position: absolute;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -20%;
+}
+.cards h3 {
+  padding-top: 20px;
+}
 
-    /* stylinng for course cards */
-    .course-cards
-    {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        text-align: center;
-        grid-gap: 30px 30px;   
-        
-         margin: 20px 90px;  
-       
-    }
+.cards div i {
+  color: black;
+  margin-bottom: 0px;
+}
 
-    .course-card-container section
-    {        
-        
-        margin-top: 0px; 
-        
-         box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.2); 
-         padding: 40px;
-        
-                 
-    }
-     .course-card-container section h3 ,.course-card-container section p
-     {
-        padding: 20px;
-     }
-     .course-card-container section i{
-        color: gold;
-     }
+/* stylinng for course cards */
+.course-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+  grid-gap: 30px 30px;
 
-    .course-card-container h1
-    {
-        background-color: #67ab9d;
-        margin-bottom: 0px;
-        color: white;
-    }    
-    .course-button
-    {
-        background-color: #67ab9d;;
-        margin:10px 0px;
-        width: 120px;
-        height: 40px;        
+  margin: 20px 90px;
+}
 
-    }
+.course-card-container section {
+  margin-top: 0px;
 
-  
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.2);
+  padding: 40px;
+}
+.course-card-container section h3,
+.course-card-container section p {
+  padding: 20px;
+}
+.course-card-container section i {
+  color: gold;
+}
+
+.course-card-container h1 {
+  background-color: #67ab9d;
+  margin-bottom: 0px;
+  color: white;
+}
+.course-button {
+  background-color: #67ab9d;
+  margin: 10px 0px;
+  width: 120px;
+  height: 40px;
+}
+
 /* footer design */
 
-footer
-{
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    background-color: rgb(187, 214, 196);
-    margin-top: 40px;
+footer {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  background-color: rgb(187, 214, 196);
+  margin-top: 40px;
 }
-
 
 /* comapny info in footer */
-.company
-{
-    text-align: left;
-    padding: 20px;
+.company {
+  text-align: left;
+  padding: 20px;
 }
-.company h2
-{
- padding: 10px;
- display: inline-block
+.company h2 {
+  padding: 10px;
+  display: inline-block;
 }
-.company p
-{
-    padding: 10px;
+.company p {
+  padding: 10px;
 }
-
 
 /* service in footer */
 
-.services
-{
-  
-   padding: 20px;
+.services {
+  padding: 20px;
 }
-.services h2{        
-    padding-left: 50px;
-    
+.services h2 {
+  padding-left: 50px;
 }
-.services ul li
-{
-    list-style: none;  
-    padding: 10px 10px;  
-    
+.services ul li {
+  list-style: none;
+  padding: 10px 10px;
 }
 
 /* office */
 
-.office
-{
-    padding:20px;
+.office {
+  padding: 20px;
 }
-.office h2
-{
-    padding-left: 10px;
+.office h2 {
+  padding-left: 10px;
 }
-.office address 
-{
-    padding:30px 5px ;
+.office address {
+  padding: 30px 5px;
 }
-.office p
-{
-    margin-left: 10px;
+.office p {
+  margin-left: 10px;
 }
 
-.socialmedia
-{
-    padding: 30px;
+.socialmedia {
+  padding: 30px;
 }
-.socialmedia input
-{
-    padding: 10px;
+.socialmedia input {
+  padding: 10px;
 }
-.socialmedia i{
-    background-color:#055343;
-    padding: 12px;
-    color: aliceblue;
-    border-radius: 5px;
+.socialmedia i {
+  background-color: #055343;
+  padding: 12px;
+  color: aliceblue;
+  border-radius: 5px;
 }
-.socialmedia h2{
-    padding-bottom: 10px;
+.socialmedia h2 {
+  padding-bottom: 10px;
 }
-.socialmedia-icons i
-{
- padding: 20px;
- background-color: #055343;
- color: aliceblue;
- margin: 10px;
- border-radius: 5px;
+.socialmedia-icons i {
+  padding: 20px;
+  background-color: #055343;
+  color: aliceblue;
+  margin: 10px;
+  border-radius: 5px;
 }
-
-
-
-
-    
-
-
-
